--- a/Web.html
+++ b/Web.html
@@ -255,11 +255,11 @@
     <main class="link-panel">
         <div class="profile">
             <div class="glitch">
-                [ $0C!4L$ ]
+                ESPdefeator
                 <small>// root access</small>
             </div>
             <div class="tagline">
-                <span>⧩  ESPdefeator  ⧩</span>
+                <span>⧩  ESP32  ⧩</span>
             </div>
         </div>
 
