--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                         </iframe>
                     </div>
 
-                    <div class="social-links-panel" style="flex: 1; display: flex; flex-direction: column;">
+                    <div class="social-links-panel" style="flex: 1; display: flex; flex-direction: column; overflow: hidden;">
                         <div style="color:#8affb0; border-bottom:1px solid #1fff8e; font-size:0.8rem; padding-bottom:4px; flex-shrink: 0;">
                             ⤷ QUICK_LINKS
                         </div>
-                        <div class="social-grid" style="grid-template-columns: 1fr; overflow-y: auto; margin-top: 10px; flex: 1;">
+                        <div class="social-grid" style="grid-template-columns: 1fr; overflow-y: auto; flex-grow: 1; padding-right: 4px; margin-top: 5px;">
                             <a href="https://github.com/creeperrick" target="_blank">GITHUB</a>
                             <a href="https://youtube.com/@espdefeator" target="_blank">YOUTUBE</a>
                             <a href="https://tiktok.com/@espdefeator" target="_blank">TIKTOK</a>
