--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="edex-terminal">
         <div class="status-bar">
             <div class="status-item"><span class="dot"></span> ESPdefeator@OS</div>
-            <div class="status-item" id="currentPath">⚡ /socials/</div>
+            <div class="status-item" id="currentPath">⚡ //</div>
             <div class="status-item">🕒 <span id="uptime">00:00:00</span></div>
         </div>
 
@@ -167,7 +167,7 @@
             <div class="file-explorer">
                 <div class="explorer-header" id="explorerHeader">
                     <span>📁 ROOT</span>
-                    <span style="flex:1; text-align:right;" id="folderIndicator">/socials/</span>
+                    <span style="flex:1; text-align:right;" id="folderIndicator">//</span>
                 </div>
                 <div class="explorer-tree" id="fileTree">
                     </div>
@@ -207,13 +207,12 @@
                         </iframe>
                     </div>
 
-                        <div class="social-links-panel" style="flex: 1; display: flex; flex-direction: column; overflow: hidden;">
-                            <div style="color:#8affb0; border-bottom:1px solid #1fff8e; font-size:0.8rem; padding-bottom:4px; flex-shrink: 0;">
-                                ⤷ QUICK_LINKS
-                            </div>
-                            <div id="quickLinksContainer" class="social-grid" style="grid-template-columns: 1fr; overflow-y: auto; flex-grow: 1; margin-top: 10px; padding-right: 5px;">
-                            </div>
+                    <div class="social-links-panel" style="flex: 1; display: flex; flex-direction: column; overflow: hidden;">
+                        <div style="color:#8affb0; border-bottom:1px solid #1fff8e; font-size:0.8rem; padding-bottom:4px; flex-shrink: 0;">
+                            ⤷ QUICK_LINKS
                         </div>
+                        <div id="quickLinksContainer" class="social-grid" style="grid-template-columns: 1fr; overflow-y: auto; flex: 1; margin-top: 10px; padding-right: 5px;">
+                            </div>
                     </div>
                 </div>
             </div>
@@ -256,7 +255,7 @@
                 type: 'folder',
                 children: [
                     { 
-                        name: 'socials', 
+                        name: '', 
                         type: 'folder', 
                         children: [
                             { name: 'tiktok.link', type: 'file', url: 'https://tiktok.com/@espdefeator' },
