--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ESPdefeator | Mobile OS</title>
-    <style>
+    <title>ESPdefeator</title>
+       <style>
         /* RESET — eDEX-UI ultra-minimalist, neon green */
         * {
             margin: 0;
@@ -15,11 +15,11 @@
 
         body {
             background-color: #0c0c0c;
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            overflow-x: hidden;
+            overflow: hidden;
             position: relative;
         }
 
@@ -39,7 +39,7 @@
             z-index: 20;
             width: 95vw;
             max-width: 1400px;
-            height: 90vh; /* Desktop Default */
+            height: 90vh;
             background: #0f120f;
             border: 2px solid #1fff8e;
             border-radius: 12px;
@@ -132,7 +132,6 @@
             align-items: center;
             justify-content: center;
             flex: 1;
-            padding: 10px;
         }
         .analog-clock { font-size: 3.5rem; color: #8affb0; text-shadow: 0 0 15px #1fff8e; }
 
@@ -144,16 +143,30 @@
             flex: 1.5;
             display: flex;
             flex-direction: column;
-            overflow-y: auto; /* Added scroll functionality */
-            scrollbar-width: thin;
-            scrollbar-color: #1fff8e #0b140b;
+            overflow: hidden; /* Keep the panel itself clean */
         }
 
+        /* SCROLLABLE GRID LOGIC */
         .social-grid { 
             display: grid; 
             grid-template-columns: 1fr; 
             gap: 8px; 
             margin-top: 10px; 
+            overflow-y: auto; /* Enable vertical scroll */
+            max-height: 150px; /* Limit height to trigger scrolling */
+            padding-right: 5px;
+        }
+
+        /* Custom scrollbar for the grid */
+        .social-grid::-webkit-scrollbar {
+            width: 4px;
+        }
+        .social-grid::-webkit-scrollbar-thumb {
+            background: #1fff8e;
+            border-radius: 4px;
+        }
+        .social-grid::-webkit-scrollbar-track {
+            background: #0b140b;
         }
 
         .social-grid a { 
@@ -163,65 +176,7 @@
         .social-grid a:hover { background: #1f4a1f; box-shadow: 0 0 10px #1fff8e; }
 
         .edex-footer { background: #0f1a0f; border-top: 2px solid #1fff8e; padding: 8px 20px; color: #4eff9e; font-size: 0.8rem; display: flex; justify-content: space-between; }
-
-        /* --- MOBILE RESPONSIVE OVERRIDES --- */
-        @media (max-width: 850px) {
-            .edex-terminal {
-                height: auto;
-                min-height: 98vh;
-                margin: 5px;
-            }
-            .edex-main {
-                flex-direction: column;
-                overflow-y: visible;
-            }
-            .file-explorer {
-                width: 100%;
-                max-height: 250px;
-            }
-            .center-area {
-                flex: none;
-            }
-            /* Stack clock, spotify, and links */
-            .center-area > div:last-child {
-                flex-direction: column !important;
-            }
-            .terminal-window {
-                min-height: 350px;
-            }
-            .analog-clock {
-                font-size: 2.5rem;
-            }
-            .social-links-panel {
-                background: #0b140b;
-                border: 1px solid #1fff8e;
-                border-radius: 8px;
-                padding: 10px;
-                flex: 1.5;
-                display: flex;
-                flex-direction: column;
-                overflow: hidden; /* Keep the panel itself clean */
-            }
-        /* SCROLLABLE GRID LOGIC */
-            .social-grid { 
-                display: grid; 
-                grid-template-columns: 1fr; 
-                gap: 8px; 
-                margin-top: 10px; 
-                overflow-y: auto; /* Enable vertical scroll */
-                max-height: 150px; /* Limit height to trigger scrolling */
-                padding-right: 5px;
-            }
-            .status-bar {
-                font-size: 0.7rem;
-                flex-wrap: wrap;
-                gap: 5px;
-            }
-            .tree-item {
-                padding: 12px 12px 12px 35px; /* Larger touch targets */
-            }
-        }
-    </style>
+    </style> 
 </head>
 <body>
 
