--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESPdefeator</title>
     <style>
+                /* Default styles (Desktop) */
+        body {
+          font-size: 18px;
+          background-color: white;
+        }
         
+        /* Mobile Styles (Max-width: 768px) */
+        @media only screen and (max-width: 768px) {
+          body {
+            font-size: 14px;
+            background-color: lightgray;
+          }
+          
+          /* Example: Switch from horizontal to vertical layout */
+          .container {
+            flex-direction: column;
+          }
+        }
+
         /* RESET — eDEX-UI ultra-minimalist, neon green */
         * {
             margin: 0;
